Client side routing, fonts

--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Corsiva";
+  font-weight: 400;
+  src: url(/fonts/corsiva.ttf) format("truetype");
+}
