Add datepicker and formik

--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -13,3 +13,11 @@ input::placeholder {
   text-align: center;
   color: --var(secondary);
 }
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+.react-datepicker__input-container > input {
+  width: inherit;
+}
